# esp32_stuff

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  Makefile  sdkconfig  test_receive.py
app/bmp280/: CMakeLists.txt  bmp280.cc  bmp280.hh
app/fonts/: CMakeLists.txt  ttf_to_cpp.py
app/fonts/subway_ticker/: font.cc  font.hh
app/icm20948/: CMakeLists.txt  icm20948.cc  icm20948.hh
app/main/: main.cpp  ssd1306.hh
app/udp_comm/: CMakeLists.txt  imu_samples.proto  imu_samples_to_proto.cc  imu_samples_to_proto.hh  udp_comm.cc  udp_comm.hh
app/udp_comm/proto/: CMakeLists.txt
app/udp_comm/proto-c/: imu_samples.pb-c.c  imu_samples.pb-c.h
app/udp_comm/proto-py/: imu_samples_pb2.py
components/esp_common/include/: esp_attr.h
